--- a/css/promotions.css
+++ b/css/promotions.css
@@ -42,6 +42,9 @@
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
     width: 280px;
+    margin-left: 30px;
+    padding-left: 40px;
+    text-align: left;
 }
 
 .clippy-desktop {
